# ferum_custom

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_NOTES.md  Dockerfile  README.md  RUN.md  Technical_Specification.txt  apps.json  license.txt  pyproject.toml
.cache/pre-commit/: db.db
.fastmcp-venv/: pyvenv.cfg
.github/: pull_request_template.md  semgrep-rules.version
.github/workflows/: ci.yml  linter.yml  security.yml
artifacts/codex_analysis/: ci_cd_map.md  doctype_inventory.csv  doctype_inventory.md  hooks_map.md  patches_inventory.md  repo_overview.md  repo_tree.txt  risks_and_findings.md
backend/: auth.py  config.py  frappe_client.py  main.py  requirements.txt  staging_notes.md
backend/bot/: __init__.py  run_polling.py  telegram_bot.py
backend/routers/: __init__.py  auth.py  invoices.py  metrics.py  notifications.py  projects.py  reports.py  requests.py
backend/tests/: __init__.py  test_contract_frappe_api.py  test_main.py  test_settings_vault.py
docs/: README.md  api_design.md  codex_todo_contract_project_objects_acts.md  deployment_ci_cd.md  entity_relationship_model.md  glossary_appendix.md  integrations.md  package_refactor_report.md  security_architecture.md  system_overview.md  user_roles_permissions_matrix.md
docs/architecture/: project_as_container.md  project_site_tobe.md
docs/audit/: 2026-02-05_audit.md  2026-02-09_audit.md  2026-02-09_runtime_audit_erpclone.ferumrus.ru.json  2026-02-09_runtime_audit_test_site.json  2026-02-10_runtime_audit_erpclone.ferumrus.ru.json  2026-02-10_runtime_audit_test_site.json  2026-02-11_runtime_audit_erpclone.ferumrus.ru.json  2026-02-11_runtime_audit_test_site.json  README.md  duplicated_package_segments.txt  hooks_import_check.txt  import_map_summary.json  package_dirs.txt  phase_1_vault_config.md  phase_2_technical_debt.md  phase_3_scaling.md  project_p0_usage_rg.txt  project_site_usage_files.txt  project_site_usage_rg.txt  test_site_doctype_tree_check.txt
docs/audits/: 2026-02-05_audit.md
docs/business_processes/: README.md  business_processes_ru.md  business_processes_ru_legacy.md  document_attachment_management.md  (+8 more)
ferum_custom/: hooks.py  modules.txt  notifications.py  patches.txt  security_pqc_rules.py  test_custom_app.py
scripts/: backup_db.sh  render_env_from_vault.py  restore_db.sh
telegram_bot/: main.py  selftest.py
(+325 files in other folders)
