[project]
name = "ferum_custom"
authors = [
    { name = "Ferum", email = "rusakov@ferumrus.ru"}
]
description = "Custom"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
	"B",
	"RUF",
]
ignore = [
	"B008", # default parameter uses call (allowed for FastAPI dependencies)
	"B017", # assertRaises(Exception) - should be more specific
	"B018", # useless expression, not assigned to anything
	"B023", # function doesn't bind loop variable - will have last iteration's value
	"B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
	"RUF001", # ambiguous unicode characters (RU labels/strings)
	"RUF003", # ambiguous unicode characters in comments
	"UP030", # Use implicit references for positional format fields (translations)
	"UP031", # Use format specifiers instead of percent format (translations)
	"UP032", # Use f-string instead of `format` call (translations)
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
addopts = ["-q", "--disable-warnings", "--maxfail=1"]

[tool.mypy]
python_version = "3.12"
files = ["backend", "ferum_custom/integrations/fastapi_backend"]
pretty = true
show_error_codes = true
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["backend.bot.telegram_bot"]
ignore_errors = true
